--- a/src/app/component/coupon-details/coupon-details.component.html
+++ b/src/app/component/coupon-details/coupon-details.component.html
@@ -82,7 +82,7 @@
             <button mat-raised-button color="primary" (click)="addOrUpdateCoupon()">Submit</button>
           
             <!-- dont work -->
-            <button mat-raised-button color="primary" [routerLink]="['/get-all-coupons']">Back</button>
+            <button mat-raised-button color="primary" (click)="goBeck()">Back</button>
  
             
     </form>
