--- a/src/app/component/coupon-details/coupon-details.component.html
+++ b/src/app/component/coupon-details/coupon-details.component.html
@@ -5,21 +5,21 @@
     <h3>My Coupon</h3>
     <form #my_form="ngForm">
         
-        <input name="id" #coupon_id *ngIf="type==='Update'" [disabled]="type==='Update'" type="number" placeholder="id"
+        <input name="id" #coupon_id *ngIf="type==='Update'" [disabled]="type==='Update'" type="number" placeholder="Id"
             [(ngModel)]="coupon.id">
         <br>
         <label for="first-name">Company-id</label>
-        <input name="company_id" #coupon_company_id="ngModel" required min="0" pattern="^(\d+)$" type="number"
-            placeholder="company_id" [(ngModel)]="coupon.company_id">
-        <span *ngIf="coupon_company_id.errors?.required && coupon_company_id.touched">Missing Company-Id</span>
-        <span *ngIf="isNegative(coupon_company_id.value)">Company-Id must be a positive value</span>
-        <span *ngIf="coupon_company_id.errors?.pattern">Company-Id must be a perfect Number!</span>
+        <input name="companyId" #coupon_companyId="ngModel" required min="0" pattern="^(\d+)$" type="number"
+            placeholder="Company_id" [(ngModel)]="coupon.companyId">
+        <span *ngIf="coupon_companyId.errors?.required && coupon_companyId.touched">Missing Company-Id</span>
+        <span *ngIf="isNegative(coupon_companyId.value)">Company-Id must be a positive value</span>
+        <span *ngIf="coupon_companyId.errors?.pattern">Company-Id must be a perfect Number!</span>
 
         <br><br>
         <label for="Choose Category">Choose Category:</label>
 
-        <select name="category_id" #coupon_category_id="ngModel" type="text" placeholder="category_id"
-            [(ngModel)]="coupon.category_id">
+        <select name="category" #coupon_category="ngModel" type="text" placeholder="Category"
+            [(ngModel)]="coupon.category">
 
             <option selected disabled>Choose Category:</option>
             <option>Food</option>
@@ -28,38 +28,35 @@
             <option>Restaurant</option>
 
         </select>
-        <span *ngIf="coupon_category_id.errors?.required && coupon_category_id.touched">Missing category_id</span>
+        <span *ngIf="coupon_category.errors?.required && coupon_category.touched">Missing category_id</span>
 
         <br><br>
         <label for="title">Title</label>
-        <input name="title" #coupon_title="ngModel" required minlength=2 type="text" placeholder="title"
+        <input name="title" #coupon_title="ngModel" required minlength=2 type="text" placeholder="Title"
             [(ngModel)]="coupon.title">
-
-
         <span *ngIf="coupon_title.errors?.required && coupon_title.touched">Missing title</span>
-        <br><br>
-        <label for="start-date">Start-date</label>
-        <input name="start-date" #coupon_start_date="ngModel" required minlength=8 type="datetime-local"
-            placeholder="start-date" [(ngModel)]="coupon.start_date">
 
-        <!-- <span *ngIf="coupon.start_date.touched">Missing start-date</span> -->
         <br><br>
-        <label for="end">End date</label>
-        <input name="end-date" #coupon_description="ngModel" required minlength=8 type="datetime-local"
-            placeholder="end-date" [(ngModel)]="coupon.end_date">
-
+        <label for="startDate">Start-date</label>
+        <input name="startDate" #coupon_start_date="ngModel"  type="date"
+            placeholder="Start-date" [(ngModel)]="coupon.startDate">
+        <span *ngIf="coupon_start_date.errors?.required && coupon_start_date.touched" >Missing End Date</span>
+        <br><br>
+        <label for="endDate">End-date</label>
+        <input name="endDate" #coupon_end_date="ngModel"  type="date"
+            placeholder="End-date" [(ngModel)]="coupon.endDate">
+            <span *ngIf="coupon_end_date.errors?.required && coupon_end_date.touched" >Missing End Date</span>
         <br><br>
 
         <label for="description">Description</label>
         <input name="description" #coupon_description="ngModel" required minlength=2 type="text"
-            placeholder="description" [(ngModel)]="coupon.description">
-
+            placeholder="Description" [(ngModel)]="coupon.description">
         <span *ngIf="coupon_description.errors?.required && coupon_description.touched">Missing description</span>
 
         <br> <br>
         <label for="amount">Amount</label>
             <input name="amount" #coupon_amount="ngModel" required min="0" pattern="^(\d+)$" type="number"
-                placeholder="amount" [(ngModel)]="coupon.amount">
+                placeholder="Amount" [(ngModel)]="coupon.amount">
             <span *ngIf="coupon_amount.errors?.required && coupon_amount.touched">Missing Amount</span>
             <span *ngIf="isNegative(coupon_amount.value)">Amount must be a positive value</span>
             <span *ngIf="coupon_amount.errors?.pattern">Amount must be a perfect Number!</span>
@@ -74,7 +71,7 @@
             <label for="Image">Image</label>
             <input name="image" #coupon_image="ngModel" type="text" placeholder="image" [(ngModel)]="coupon.image">
 
-            <span *ngIf="coupon_image.errors?.required && coupon_image.touched">Missing description</span>
+            <span *ngIf="coupon_image.errors?.required && coupon_image.touched">Missing image</span>
 
             <br><br>
             <!-- chek why dont work -->
