--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -11,10 +11,10 @@
         
     <br><br>
   
-    <input #password_input="ngModel" type="password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
+    <input #password_input="ngModel" type="password" 
     required placeholder="password" name="password" [(ngModel)]="credentials.password">
     <span *ngIf="password_input.touched && password_input.errors?.required" >Missing Password</span>
-   <span *ngIf="password_input.errors?.pattern">Minimum 8 characters, at least one letter and one number:   </span> 
+    <!-- <span *ngIf="password_input.errors?.pattern">Minimum 8 characters, at least one letter and one number:   </span>  --> -->
  
     <br><br> 
     <label for="type">Choose Type</label>
