--- a/src/app/component/customer/customer.component.html
+++ b/src/app/component/customer/customer.component.html
@@ -1,5 +1,5 @@
 
- <app-get-all-coupons>*ngif="getAllCoupCus"</app-get-all-coupons>
+ <app-purchase-coupons>*ngif="getAllCoupCus"</app-purchase-coupons>
 
  <button mat-raised-button color="primary" (click)=" customerList()">My Customer Coupons</button>
  
