--- a/src/app/component/coupon-details/coupon-details.component.css
+++ b/src/app/component/coupon-details/coupon-details.component.css
@@ -55,7 +55,8 @@
     text-align: center;
   } 
   button{
-    margin-right: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
     margin-top: 30px;
 }
 
