--- a/src/app/component/customers-details/customers-details.component.css
+++ b/src/app/component/customers-details/customers-details.component.css
@@ -41,7 +41,8 @@ h3 {
   text-align: center;
 } 
 button{
-  margin-right: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
   margin-top: 30px;
 }
 
