--- a/src/app/component/get-all-companies/get-all-companies.component.html
+++ b/src/app/component/get-all-companies/get-all-companies.component.html
@@ -15,11 +15,13 @@
             <td>{{c.name}}</td>
             <td>{{c.email}}</td>
             <td>{{c.password}}</td>
-            <td> <mat-icon fxFlex="10%"[routerLink]="['/company-details/'+c.id]" routerLinkActive="router-link-active" >mode_edit</mat-icon>  <mat-icon fxFlex="10%" (click)="deleteCompany(c.id)">delete</mat-icon>       
+            <td>      <mat-icon (click)="getNavigation('view', c.id)">account_box</mat-icon>
+                <mat-icon fxFlex="10%" [routerLink]="['/company-details/'+c.id]" routerLinkActive="router-link-active">mode_edit</mat-icon>
+                <mat-icon fxFlex="10%" (click)="deleteCompany(c.id)">delete</mat-icon>
         </tr>
     </table>
     <br>
-    <button  mat-raised-button color="accent" [routerLink]="['/company-details/'+0]" routerLinkActive="router-link-active">Add Company</button>
-    
-</div>
+    <button mat-raised-button color="accent" [routerLink]="['/company-details/'+0]"
+        routerLinkActive="router-link-active">Add Company</button>
+        <span class="example-spacer"></span>
 
