--- a/src/app/component/get-all-customers/get-all-customers.component.html
+++ b/src/app/component/get-all-customers/get-all-customers.component.html
@@ -4,23 +4,27 @@
     <table>
         <tr>
             <th>Id</th>
-            <th>First-Name</th>
-            <th>Last-name</th>
+            <th>firstName</th>
+            <th>lastName</th>
             <th>Email</th>
             <th>Password</th>
             <th>Action</th>
         </tr>
         <tr *ngFor="let c of customers">
             <td>{{c.id}}</td>
-            <td>{{c.first_name}}</td>
-            <td>{{c.last_name}}</td>
+            <td>{{c.firstName}}</td>
+            <td>{{c.lastName}}</td>
             <td>{{c.email}}</td>
             <td>{{c.password}}</td>      
-            <td> <mat-icon fxFlex="10%"[routerLink]="['/company-details/'+c.id]" routerLinkActive="router-link-active" >mode_edit</mat-icon>  <mat-icon fxFlex="10%" (click)="deleteCustomer(c.id)">delete</mat-icon>       
+            <td>
+                
+                <mat-icon (click)="getNavigation('view', c.id)">account_box</mat-icon>
+                <mat-icon fxFlex="10%" [routerLink]="['/customer-details/'+c.id]" routerLinkActive="router-link-active">mode_edit</mat-icon>
+                <mat-icon fxFlex="10%" (click)="deleteCustomer(c.id)">delete</mat-icon>
         </tr>
     </table>
     <br>
-    <button mat-raised-button color="accent" [routerLink]="['/customer-details/'+0]" routerLinkActive="router-link-active">Add Customer</button>
-   
-</div> 
+    <button mat-raised-button color="accent" [routerLink]="['/customer-details/'+0]"
+        routerLinkActive="router-link-active">Add Customer</button>
+        <span class="example-spacer"></span>
 
