--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
-<nav><app-navbar></app-navbar></nav>
 
 
-<main><router-outlet></router-outlet></main>
+<header>
+    <app-navbar></app-navbar>
+</header>
 
- <footer></footer><app-footer></app-footer>
+<main>
+    <router-outlet></router-outlet>
+</main>
 
+ <footer>
+ <app-footer></app-footer>
+</footer>
  
