--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,17 +1,62 @@
-#container {
-   min-height: 100%;
-   height: auto !important;
-   position: relative;
- }
- #page {
-   margin: 0 auto;
-   padding-bottom: 2.5rem;
- }
- app-footer {
+
+
+ section {
+  height: 100%;
+  border: 1px solid black;
+  background-color: lightblue;
+  box-sizing: border-box;
+  /* text-align: center; */
+  display: grid;
+  grid-template-rows: 13% 12% 70% 5%;
+  grid-template-columns: repeat(12, 1fr);
+}
+
+header {
+  grid-column: span 12;
+  /* border: 1px solid black;
+  border-radius: 7%; */
+}
+
+nav {
+  grid-column: span 12;
+  z-index: 1;
+  margin: 0;
+}
+
+aside {
+  grid-column: span 3;
+  /* border: 1px solid black;
+  border-radius: 7%; */
+  margin: 0;
+}
+
+main {
+
+  min-height: 70vh; 
+  
+}
+
+footer {
+  grid-column: span 12;
+  /* border: 1px solid black;
+  border-radius: 7%; */
+}
+
+
+/* div.conteiner {
+  margin-right: auto;
+  margin-left: auto;
+  width: 8em
+} */
+
+
+/* button {
+  position: absolute;
+  font-size: x-large;
+  top: 85%;
+} */
+
+
  
-   height:7.5rem;
-   clear: both;
-   text-align: center;
-   background-color: white;
-   /* z-index: 1000; */
- }
+
+ 
