--- a/src/app/component/purchase-coupons/purchase-coupons.component.html
+++ b/src/app/component/purchase-coupons/purchase-coupons.component.html
@@ -1,60 +1,69 @@
-<h1>Coupon</h1>
 
-<div *ngIf="coupons">
-    <table>
-        <tr>
-            <th>Id</th>
-            <th>companyId</th>
-            <th>category</th>
-            <th>Title</th>
-            <th>Description</th>
-            <th>startDate</th>
-            <th>endDate</th>
-            <th>Amount</th>
-            <th>Price</th>
-            <th>Image</th>
-            <th>Action</th>
+  <h1>Coupon</h1>
 
-
-        </tr>
-        <tr *ngFor="let c of coupons">
-            <td>{{c.id}}</td>
-            <td>{{c.companyId}}</td>
-            <td>{{c.category}}</td>
-            <td>{{c.title}}</td>
-            <td>{{c.description}}</td>
-            <td>{{c.startDate}}</td>
-            <td>{{c.endDate}}</td>
-            <td>{{c.amount}}</td>
-            <td>{{c.price}}</td>
-            <td>{{c.image}}</td>
-
-            <td>
-                
-                <mat-icon (click)="getNavigation('view', c.id)">account_box</mat-icon>
-        </tr>
-    </table>
-    <br>
-    <button mat-raised-button color="accent" [routerLink]="['/coupon-details/'+0]"
-        routerLinkActive="router-link-active">Buy Coupon</button>
-        <span class="example-spacer"></span>
+  <div *ngIf="coupons">
+      <table>
+          <tr>
+              <th>Id</th>
+              <th>companyId</th>
+              <th>category</th>
+              <th>Title</th>
+              <th>Description</th>
+              <th>startDate</th>
+              <th>endDate</th>
+              <th>Amount</th>
+              <th>Price</th>
+              <th>Image</th>
+              <th>Action</th>
   
-        <select #category (change)="filterCoupon(category.value)">
-            <option selected disabled>Choose Category:</option>
-            <option value="food">Food</option>
-            <option value="vacation">Vacation</option>
-            <option value="electricity">Electricity</option>
-            <option value="restaurant">Restaurant</option>
-            <option value="all">All Coupons</option>
-        </select>
+  
+          </tr>
+          <tr *ngFor="let c of coupons">
+              <td>{{c.id}}</td>
+              <td>{{c.companyId}}</td>
+              <td>{{c.category}}</td>
+              <td>{{c.title}}</td>
+              <td>{{c.description}}</td>
+              <td>{{c.startDate}}</td>
+              <td>{{c.endDate}}</td>
+              <td>{{c.amount}}</td>
+              <td>{{c.price}}</td>
+              <td>{{c.image}}</td>
+  
+              <td>
+                  
+               
+             
+      </table>
+      <br>
+      <button mat-raised-button color="accent" [routerLink]="['/purchase-details-coupons/']"
+          routerLinkActive="router-link-active">Buy coupon</button>
+          <span class="example-spacer"></span>
     
-        <span class="example-spacer"></span>
-        <input type="text" placeholder= price #maxPrice (change)="filterCouponMaxPrice(maxPrice.value)">
-        <span class="example-spacer"></span>
-        
-        
-        
-        <span class="example-spacer"></span>
-        <button mat-raised-button color="primary" (click)="goBack()">Back</button>
-        <span class="example-spacer"></span>
-</div>
+          <select #category (change)="filterCoupon(category.value)">
+              <option selected disabled>Choose Category:</option>
+              <option value="food">Food</option>
+              <option value="vacation">Vacation</option>
+              <option value="electricity">Electricity</option>
+              <option value="restaurant">Restaurant</option>
+              <option value="all">All Coupons</option>
+          </select>
+      
+          <span class="example-spacer"></span>
+          <input type="text" placeholder= price #maxPrice (change)="filterCouponMaxPrice(maxPrice.value)">
+          <span class="example-spacer"></span>
+          
+          
+          
+          <span class="example-spacer"></span>
+          <button mat-raised-button color="primary" (click)="goBack()">Back</button>
+          <span class="example-spacer"></span>
+  </div>
+
+<!-- <div class="modal-body text-center">
+  <button class="btn btn-primary btn-lg text-center" (click)="addPurchaseCoupon()" [disabled]="couponExists">Buy Coupon</button>
+  <span class="example-spacer"></span> -->
+  
+
+
+
