--- a/src/app/component/purchase-coupon-details/purchase-coupon-details.component.html
+++ b/src/app/component/purchase-coupon-details/purchase-coupon-details.component.html
@@ -27,19 +27,13 @@
             <td>{{c.amount}}</td>
             <td>{{c.price}}</td>
             <td>{{c.image}}</td>
-            <td> <button mat-raised-button color="primary" (click)=" addPurchaseCoupon(c)">Buy Coupon</button></td>
+            <td><button mat-raised-button color="primary" (click)="addPurchaseCoupon(c)">Buy Me</button></td>
             <td>
     </table>
- </div>
 
-
-
-          
-       
-          
             <button mat-raised-button color="primary" (click)="goBack()">Back</button>
  
-            
+ </div>
    
 
 
