--- a/src/app/component/get-all-customers/get-all-customers.component.css
+++ b/src/app/component/get-all-customers/get-all-customers.component.css
@@ -20,3 +20,8 @@ table {
     background-color: black;
     color: white;
   }
+  button{
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 30px;
+}
