--- a/src/app/component/login/login.component.css
+++ b/src/app/component/login/login.component.css
@@ -53,3 +53,10 @@ div {
       width:200px;
 
     }
+
+    span {
+      color: red;
+      margin: 10px;
+      font-size: medium;
+      position: absolute;
+    }
