--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -1,1 +1,15 @@
-<p>about works!</p>
+<div>
+    Hi! 
+    I am Ira Piltser Zimon, a Java Full stack developer focused on crafting great web experiences.
+     Designing and Coding have been my passion since the days I started working with computers.
+    I enjoy creating beautifully designed, intuitive and functional websites, and deal with secured  
+    development challenges as well. 
+    
+    My first project is called CouponZ that aim to manage platform that offer different firm coupons 
+    for customers that wish to purchase different coupons for different topics(E.g: Electricity , Vacations
+     , Restaurants, Foods).
+
+</div>
+
+
+ <img style="float: left; margin: 30px 30px 70px 60px" src="assets/images/me.jpg">
