--- a/src/app/component/customers-details/customers-details.component.html
+++ b/src/app/component/customers-details/customers-details.component.html
@@ -28,7 +28,7 @@
         <br>
         
          <button mat-raised-button color="primary" (click)="addOrUpdateCustomer()">Submit</button>
-         <button mat-raised-button color="primary" [routerLink]="['/get-all-customers/']">Back</button> 
+         <button mat-raised-button color="accent" [routerLink]="['/get-all-customers/']">Back</button> 
  
     </form>
 </div> 
