--- a/src/app/component/get-all-companies/get-all-companies.component.html
+++ b/src/app/component/get-all-companies/get-all-companies.component.html
@@ -25,5 +25,5 @@
         routerLinkActive="router-link-active">Add Company</button>
         <span class="example-spacer"></span>
         <span class="example-spacer"></span>
-        <button mat-raised-button color="primary" (click)="goBack()">Back</button>
+        <button mat-raised-button color="accent" (click)="goBack()">Back</button>
         <span class="example-spacer"></span>
