--- a/src/app/component/get-all-coupons/get-all-coupons.component.html
+++ b/src/app/component/get-all-coupons/get-all-coupons.component.html
@@ -1,4 +1,4 @@
-<h1>Coupon</h1>
+<h1>Companies Coupons</h1>
 
 <div *ngIf="coupons">
     <table>
@@ -56,6 +56,6 @@
         
         
         <span class="example-spacer"></span>
-        <button mat-raised-button color="primary" (click)="goBack()">Back</button>
+        <button mat-raised-button color="accent" (click)="goBack()">Back</button>
         <span class="example-spacer"></span>
 </div>
