--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -26,9 +26,9 @@
     <button mat-raised-button color="warn"(click)="loginToServer()">Login</button>
 
     
-<!-- delete that -->
-    <hr>
-    <p>{{"{"+"email:"+ credentials.email +","+"password:"+ credentials.password +","+ "type:"+credentials.type +"}"}}</p>
+
+    <!-- <hr>
+    <p>{{"{"+"email:"+ credentials.email +","+"password:"+ credentials.password +","+ "type:"+credentials.type +"}"}}</p> -->
 </form>
 </div>
 
