--- a/src/app/component/admin/admin.component.css
+++ b/src/app/component/admin/admin.component.css
@@ -4,3 +4,10 @@ button{
     margin-right: 10px;
     margin-top: 30px;
 }
+
+h1{
+    text-shadow: 2px 2px palevioletred;
+    z-index: 99;
+    font-weight: 900;
+    font-size:xx-large;
+}
