--- a/src/app/component/company-details/company-details.component.css
+++ b/src/app/component/company-details/company-details.component.css
@@ -30,6 +30,12 @@ border: 1px solid #ccc;
 border-radius: 4px;
 box-sizing: border-box;
 }
+h1 {
+  text-align: center;
+  font-weight: 900;
+} 
+
+
 
 
 
