--- a/src/app/component/company-details/company-details.component.html
+++ b/src/app/component/company-details/company-details.component.html
@@ -20,7 +20,7 @@
         <button mat-raised-button color="primary" (click)="addOrUpdateCompany()">Submit</button>
  
    
-        <button mat-raised-button color="primary"  (click)="goBack()">Back</button>
+        <button mat-raised-button color="accent"  (click)="goBack()">Back</button>
  
     </form>
 </div>
