--- a/src/app/component/coupon-details/coupon-details.component.css
+++ b/src/app/component/coupon-details/coupon-details.component.css
@@ -51,9 +51,12 @@
 		
  }
 	 
-  h3 {
-    text-align: center;
-  } 
+  
+    h3 {
+      text-align: center;
+      font-weight: 900;
+    } 
+ 
   button{
     margin-left: 30px;
     margin-right: 30px;
