--- a/src/app/component/get-all-customers/get-all-customers.component.html
+++ b/src/app/component/get-all-customers/get-all-customers.component.html
@@ -26,5 +26,5 @@
         routerLinkActive="router-link-active">Add Customer</button>
         <span class="example-spacer"></span>
         <span class="example-spacer"></span>
-        <button mat-raised-button color="primary" (click)="goBack()">Back</button>
+        <button mat-raised-button color="accent" (click)="goBack()">Back</button>
         <span class="example-spacer"></span>
