--- a/src/app/component/purchase-coupon-details/purchase-coupon-details.component.html
+++ b/src/app/component/purchase-coupon-details/purchase-coupon-details.component.html
@@ -31,7 +31,7 @@
             <td>
     </table>
 
-            <button mat-raised-button color="primary" (click)="goBack()">Back</button>
+            <button mat-raised-button color="accent" (click)="goBack()">Back</button>
  
  </div>
    
