--- a/src/app/component/purchase-coupons/purchase-coupons.component.html
+++ b/src/app/component/purchase-coupons/purchase-coupons.component.html
@@ -54,7 +54,7 @@
           <span class="example-spacer"></span>
           
           <span class="example-spacer"></span>
-          <button mat-raised-button color="primary" (click)="goBack()">Back</button>
+          <button mat-raised-button color="accent" (click)="goBack()">Back</button>
           <span class="example-spacer"></span>
   </div>
 
