--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -6,7 +6,8 @@
 
 <br>
 <button mat-raised-button color="primary"(click)="getAllComButten()">Companies</button>
- 
+<span class="example-spacer"></span>
  <button mat-raised-button color="primary"(click)="getAllCusButten()">Customers</button>
-
+ <span class="example-spacer"></span>
+ 
  <button mat-raised-button color="accent" (click)="goBack()">Back</button>
